Did a few unit tests on q_rhs_H_mf and seems to work.  a few things to note:
-	working on q_rhs_H_mf:
	it requires u_mf as input in order to feed that to q_rhs_H_mf_u as input
	…but it needs u_s in order to multiply each control with each partial derivative
	q_rhs_H_mf_u does NOT need u_s, however. Only qp_rhs_H_mf, and q_rhs_H_mf needs that (because qp_rhs_H_mf calls q_rhs_H_mf).
-	It was decided that we will pass u_s through as input to qp_rhs_H_mf.  u_s is given as part of the **kwargs.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -255,7 +255,7 @@
     "        return self.q_rhs_H_mf_nou(q_mf, p_mf) + sum([self.q_rhs_H_mf_u(q_mf, p_mf)*u_i for u_i in u_s])\n",
     "        \n",
     "    def q_rhs_H_mf_u(self, q_mf, p_mf, u_mf):\n",
-    "        # there should be one of these methods for EACH control variable\n",
+    "        # \n",
     "        assert np.shape(q_s)==np.shape(p_mf), 'shapes for q_s and p_mf are not equal'\n",
     "        p_H_mf_u_dot_1 = q_s + p_mf # or something\n",
     "        return np.concatenate([p_H_mf_u_dot_1])\n",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
@@ -431,7 +431,7 @@
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
     "\n",
-    "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_mf, p_mf, u_mf)\n",
+    "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_mf, p_mf, u_mf, us)\n",
     "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
     "        q_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
     "        \n",
@@ -484,24 +484,31 @@
     "    def H_MF_u(self, q_mf, p_mf, u_mf):\n",
     "        return 1\n",
     "        \n",
-    "    def qp_rhs_H_mf(self, q_mf, p_mf, u_s):\n",
+    "    def qp_rhs_H_mf(self, q_mf, p_mf, u_mf, u_s):\n",
     "        # remember that we want to propagate as much as possible together in the same rhs function for numerical purposes\n",
     "        # remember that q_rhs here is w.r.t p_mf but p_rhs here is w.r.t q_s\n",
-    "        q_H_mf_dot = self.p_rhs_H_mf(q_mf, p_mf, u_s)\n",
-    "        p_H_mf_dot = self.q_rhs_H_mf(q_mf, p_mf, u_s)\n",
+    "        q_H_mf_dot = self.p_rhs_H_mf(q_mf, p_mf, u_mf)\n",
+    "        p_H_mf_dot = self.q_rhs_H_mf(q_mf, p_mf, u_mf, u_s)\n",
     "        return np.concatenate([q_H_mf_dot, p_H_mf_dot])\n",
     "    \n",
-    "    def q_rhs_H_mf(self, q_mf, p_mf, u_s):\n",
+    "    def q_rhs_H_mf(self, q_mf, p_mf, u_mf, u_s):\n",
+    "        # q_rhs_H_mf is the derivative wrt each of the local variables, so it will return something of dimension state_dim\n",
     "        # q_rhs_H_mf_u returns the partial derivatives wrt each control, concatenated together\n",
-    "        q_rhs_H_mf_u = sum([self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)[i]*u_s[i] for i in range(len(u_s))])\n",
-    "        return self.q_rhs_H_mf_nou(q_mf, p_mf) + q_rhs_H_mf_u\n",
+    "        q_rhs_H_mf_u = self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)\n",
+    "        q_rhs_H_mf_u_summed = sum([q_rhs_H_mf_u[i]*u_s[i] for i in range(len(u_s))])\n",
+    "        return self.q_rhs_H_mf_nou(q_mf, p_mf) + q_rhs_H_mf_u_summed\n",
     "        \n",
     "    def q_rhs_H_mf_u(self, q_mf, p_mf, u_mf):\n",
     "        # this method is will return a concatenation of all of the partial derivatives for each of the controls\n",
+    "        # each of the partial derivatives is of dimension state_dim\n",
+    "        # this means that this method will return a 2D array:\n",
+    "        #    - first dimension is the index of the control\n",
+    "        #    - second dimension is the index of the state\n",
     "        assert np.shape(q_s) == np.shape(p_mf), 'shapes for q_s and p_mf are not equal'\n",
-    "        p_H_mf_u_dot_1 = q_s + p_mf # or something\n",
-    "        p_H_mf_u_dot_2 = q_s + 2*p_mf # or something\n",
-    "        return np.concatenate([p_H_mf_u_dot_1, p_H_mf_u_dot_2])\n",
+    "        p_H_mf_u_dot_1 = p_mf # must be of dimension state_dim\n",
+    "        p_H_mf_u_dot_2 = 2*p_mf # must be of dimension state_dim\n",
+    "        q_rhs_H_mf_u = np.array([p_H_mf_u_dot_1, p_H_mf_u_dot_2])\n",
+    "        return q_rhs_H_mf_u\n",
     "\n",
     "    def p_rhs_H_mf(self, q_s, p_mf, u_s):\n",
     "        return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u_i for u_i in u_s])\n",
@@ -544,7 +551,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 135,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "q_mf, q_mf_dot, u_mf = construct_mf_vectors(myAgent2)\n",
+    "q_s, q_s_dot, u_s = construct_local_vectors(myAgent2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myAgent2.state_dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1]"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myAgent2.control_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 2.],\n",
+       "       [0., 4.]])"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this should return a 2-D array\n",
+    "# then, for each of the arrays, we multiply by a scalar value of the control, and add them together.\n",
+    "# So,  myAgent2.q_rhs_H_mf(q_mf, q_s, u_mf) should return something of dimension equal to state_dim\n",
+    "myAgent2.q_rhs_H_mf_u(q_mf, q_s, u_mf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
@@ -553,21 +642,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "only 5 should be the resulting set\n"
+      "[0. 4. 0. 4.]\n",
+      "[0. 4.]\n"
      ]
     }
    ],
    "source": [
-    "a=[3,5,2]\n",
-    "b=[2]\n",
-    "g=[a,b]\n",
-    "set([x for g_i in g for x in g_i]) - set([3,3,3,2,4])\n",
-    "print 'only 5 should be the resulting set'"
+    "# this should return something of dimension\n",
+    "print myAgent2.qp_rhs_H_mf(q_mf, q_s, u_mf, u_s)\n",
+    "print myAgent2.q_rhs_H_mf(q_mf, q_s, u_mf, u_s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
@@ -640,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
@@ -701,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
@@ -716,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
@@ -728,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false
    },
@@ -739,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
@@ -754,7 +842,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -1021,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -1137,7 +1225,25 @@
       "-> def p_rhs_H_mf(self, q_s, p_mf, u_s):\n",
       "(Pdb) n\n",
       "> <ipython-input-4-dc030c9651ac>(198)p_rhs_H_mf()\n",
-      "-> return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u_i for u_i in u_s])\n"
+      "-> return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u_i for u_i in u_s])\n",
+      "(Pdb) exit()\n",
+      "ode error: \n",
+      "ode error: object of type 'numpy.float64' has no len()\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-d70db86759c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msync\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msynchronize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-6-a3099474405a>\u001b[0m in \u001b[0;36msynchronize\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     25\u001b[0m             '''\n\u001b[1;32m     26\u001b[0m             \u001b[0;31m# run propagation with keyword arguments state_dim_l, state_dim_mf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m             \u001b[0mq_ls_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwindows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0magent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;31m#     def L_mf_q_dot(self, q_mf, q_mf_dot, u_mf):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-17-8bafa1d7c10f>\u001b[0m in \u001b[0;36msliding_window\u001b[0;34m(sliding_window_instance)\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0;31m# this propagates a single window\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m         \u001b[0;31m# inside of propagate dynamics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m         \u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ls_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwindow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropagate_dynamics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m         \u001b[0;31m# qs, ps, and us will go to Mean Field somehow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/sliding_window.py\u001b[0m in \u001b[0;36mpropagate_dynamics\u001b[0;34m(sliding_window_instance)\u001b[0m\n\u001b[1;32m    150\u001b[0m         \u001b[0;31m# retrieve values from blackboard to pass in as kwargs to the rhs functions inside of propagate_q_p and propagate_u\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    151\u001b[0m         \u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconstruct_mf_vectors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 152\u001b[0;31m         \u001b[0mqp_vecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropagate_q_p\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# assume \"u\" constant, and propagate q and p\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    153\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    154\u001b[0m         \u001b[0;31m# also need to return derivatives\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/sliding_window.py\u001b[0m in \u001b[0;36mpropagate_q_p\u001b[0;34m(qpu_vec, t_start, t_end, sliding_window_instance, q_mf, u_mf)\u001b[0m\n\u001b[1;32m    233\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_s\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    234\u001b[0m         \u001b[0mn_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_end\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 235\u001b[0;31m         \u001b[0mqp_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfailFlag\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miter_i\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mode_rk23\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqp_rhs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqp_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintegrateTol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintegrateMaxIter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGamma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGamma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mu_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mu_mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    236\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    237\u001b[0m         \u001b[0;31m# rk23 returns 2 arrays but we remove the first array by doing qp_vec[1] because rk_23 returns the initial value you passed in\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
      ]
     }
    ],
