--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 172,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 173,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 189,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +271,7 @@
     "\n",
     "    def p_rhs_H_mf_u(self, q_s, p_mf):\n",
     "        q_H_mf_u_dot = q_s + p_mf\n",
-    "        return np.concatenate([q_H_mf_u_dot])\n",
+    "        return np.array([q_H_mf_u_dot])\n",
     "\n",
     "    def L_mf_q_dot(self, q_mf, q_mf_dot, u_mf):\n",
     "        # q_mf_dot, q_mf (inputs) here will be vectors with ALL of the states\n",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 206,
    "metadata": {
     "collapsed": false
    },
@@ -487,7 +487,7 @@
     "    def qp_rhs_H_mf(self, q_mf, p_mf, u_mf, u_s):\n",
     "        # remember that we want to propagate as much as possible together in the same rhs function for numerical purposes\n",
     "        # remember that q_rhs here is w.r.t p_mf but p_rhs here is w.r.t q_s\n",
-    "        q_H_mf_dot = self.p_rhs_H_mf(q_mf, p_mf, u_mf)\n",
+    "        q_H_mf_dot = self.p_rhs_H_mf(q_mf, p_mf, u_mf, u_s)\n",
     "        p_H_mf_dot = self.q_rhs_H_mf(q_mf, p_mf, u_mf, u_s)\n",
     "        return np.concatenate([q_H_mf_dot, p_H_mf_dot])\n",
     "    \n",
@@ -506,12 +506,20 @@
     "        #    - second dimension is the index of the state\n",
     "        assert np.shape(q_s) == np.shape(p_mf), 'shapes for q_s and p_mf are not equal'\n",
     "        p_H_mf_u_dot_1 = p_mf # must be of dimension state_dim\n",
-    "        p_H_mf_u_dot_2 = 2*p_mf # must be of dimension state_dim\n",
-    "        q_rhs_H_mf_u = np.array([p_H_mf_u_dot_1, p_H_mf_u_dot_2])\n",
+    "        q_rhs_H_mf_u = np.array([p_H_mf_u_dot_1])\n",
     "        return q_rhs_H_mf_u\n",
     "\n",
-    "    def p_rhs_H_mf(self, q_s, p_mf, u_s):\n",
-    "        return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u_i for u_i in u_s])\n",
+    "# should be replaced by the method below it, but leaving here for now.\n",
+    "#     def p_rhs_H_mf(self, q_s, p_mf, u_mf, u_s):\n",
+    "#         return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u_i for u_i in u_s])\n",
+    "\n",
+    "    def p_rhs_H_mf(self, q_mf, p_mf, u_mf, u_s):\n",
+    "        # q_rhs_H_mf is the derivative wrt each of the local variables, so it will return something of dimension state_dim\n",
+    "        # q_rhs_H_mf_u returns the partial derivatives wrt each control, concatenated together\n",
+    "        p_rhs_H_mf_u = self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)\n",
+    "        p_rhs_H_mf_u_summed = sum([p_rhs_H_mf_u[i]*u_s[i] for i in range(len(u_s))])\n",
+    "        return self.p_rhs_H_mf_nou(q_mf, p_mf) + p_rhs_H_mf_u_summed\n",
+    "        \n",
     "\n",
     "    def p_rhs_H_mf_nou(self, q_s, p_mf):\n",
     "        return q_s + p_mf # or something\n",
@@ -519,9 +527,9 @@
     "    def q_rhs_H_mf_nou(self, q_s, p_mf):\n",
     "        return  q_s + p_mf\n",
     "\n",
-    "    def p_rhs_H_mf_u(self, q_s, p_mf):\n",
-    "        q_H_mf_u_dot = q_s + p_mf\n",
-    "        return np.concatenate([q_H_mf_u_dot])\n",
+    "    def p_rhs_H_mf_u(self, q_mf, p_mf, u_mf):\n",
+    "        q_H_mf_u_dot = p_mf\n",
+    "        return np.array([q_H_mf_u_dot])\n",
     "\n",
     "    def L_mf_q_dot(self, q_mf, q_mf_dot, u_mf):\n",
     "        # q_mf_dot, q_mf (inputs) here will be vectors with ALL of the states\n",
@@ -551,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 207,
    "metadata": {
     "collapsed": false
    },
@@ -563,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 208,
    "metadata": {
     "collapsed": false
    },
@@ -574,7 +582,7 @@
        "2"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 219,
    "metadata": {
     "collapsed": false
    },
@@ -596,7 +604,7 @@
        "[1]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,33 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 2.],\n",
-       "       [0., 4.]])"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# this should return a 2-D array\n",
-    "# then, for each of the arrays, we multiply by a scalar value of the control, and add them together.\n",
-    "# So,  myAgent2.q_rhs_H_mf(q_mf, q_s, u_mf) should return something of dimension equal to state_dim\n",
-    "myAgent2.q_rhs_H_mf_u(q_mf, q_s, u_mf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 220,
    "metadata": {
     "collapsed": false
    },
@@ -642,20 +624,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[0. 2.]]\n",
       "[0. 4. 0. 4.]\n",
       "[0. 4.]\n"
      ]
     }
    ],
    "source": [
-    "# this should return something of dimension\n",
-    "print myAgent2.qp_rhs_H_mf(q_mf, q_s, u_mf, u_s)\n",
-    "print myAgent2.q_rhs_H_mf(q_mf, q_s, u_mf, u_s)"
+    "# this should return a 2-D array\n",
+    "# then, for each of the arrays, we multiply by a scalar value of the control, and add them together.\n",
+    "# So,  myAgent2.q_rhs_H_mf(q_mf, q_s, u_mf) should return something of dimension equal to state_dim\n",
+    "print myAgent2.q_rhs_H_mf_u(q_mf, q_s, u_mf)\n",
+    "\n",
+    "print myAgent2.qp_rhs_H_mf(q_mf, q_s, u_mf, u_s) # this should return something of dimension state_dim*2\n",
+    "print myAgent2.q_rhs_H_mf(q_mf, q_s, u_mf, u_s) # this should return something of dimension state_dim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### same for p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 221,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 2.]]\n",
+      "[0. 4. 0. 4.]\n",
+      "[0. 4.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this should return a 2-D array\n",
+    "# then, for each of the arrays, we multiply by a scalar value of the control, and add them together.\n",
+    "# So,  myAgent2.q_rhs_H_mf(q_mf, q_s, u_mf) should return something of dimension equal to state_dim\n",
+    "print myAgent2.p_rhs_H_mf_u(q_mf, q_s, u_mf)\n",
+    "\n",
+    "print myAgent2.qp_rhs_H_mf(q_mf, q_s, u_mf, u_s) # this should return something of dimension state_dim*2\n",
+    "print myAgent2.p_rhs_H_mf(q_mf, q_s, u_mf, u_s) # this should return something of dimension state_dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
    "metadata": {
     "collapsed": false
    },
@@ -728,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 213,
    "metadata": {
     "collapsed": false
    },
@@ -789,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 214,
    "metadata": {
     "collapsed": false
    },
@@ -804,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 215,
    "metadata": {
     "collapsed": false
    },
@@ -816,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 216,
    "metadata": {
     "collapsed": false
    },
@@ -827,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 217,
    "metadata": {
     "collapsed": false
    },
@@ -842,7 +863,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 218,
    "metadata": {
     "collapsed": false
    },
