Discovered that I need to be reporting q_s_dot, p_mf_dot, and p_l_dot as output from method propagate_q_p.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 222,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 223,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 224,
    "metadata": {
     "collapsed": false
    },
@@ -300,11 +300,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 226,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-226-43b99720925c>, line 154)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-226-43b99720925c>\"\u001b[0;36m, line \u001b[0;32m154\u001b[0m\n\u001b[0;31m    def Beta_l()\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "class Agent2:\n",
     "    \n",
@@ -452,30 +461,33 @@
     "        return np.concatenate([q_rhs_H_l, p_rhs_H_l])\n",
     "\n",
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
+    "        u_s = kwargs['u_0']\n",
+    "        state_dim = kwargs['state_dim']\n",
+    "        q_mf = kwargs['q_mf']\n",
+    "        u_mf = kwargs['u_mf']\n",
     "        \n",
-    "#         def Beta_mf(q_mf, p_mf):\n",
-    "#             self.H_MF_u_1(q_mf, p_mf)*(self.q_rhs_H_mf_u_1(q_s, p_mf))\n",
+    "        # don't have q_s_dot, q_mf_dot, or p_mf_dot\n",
+    "        def Beta_j(q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j):\n",
+    "            Beta_mf=[]\n",
+    "            Beta_l=[]\n",
+    "            for k in range(len())\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "        def alpha_mf():\n",
     "        \n",
-    "#         def alpha_mf():\n",
+    "        def Beta_l()\n",
     "        \n",
-    "#         def Beta_l()\n",
-    "        \n",
-    "#         def alpha_l()\n",
+    "        def alpha_l()\n",
     "        \n",
     "        qp_vec = kwargs['qp_vec']\n",
     "        \n",
-    "        # -1*self.Gamma*(self.gamma)\n",
-    "#         u_1_dot = -1*self.Gamma*(self.gamma*(alpha()))\n",
-    "#         u_2_dot = \n",
-    "#         u_dot = np.concatenate([]) \n",
+    "        u_1_dot = -1*self.Gamma*(self.gamma*(alpha()))\n",
+    "        u_2_dot = \n",
+    "        u_dot = np.concatenate([]) \n",
     "\n",
-    "        return -1*self.Gamma*np.zeros(np.shape(u_vec))\n",
+    "        return \n",
     "\n",
-    "#     def q_rhs_H_mf_u_1(self, q_mf, p_mf):\n",
-    "                                 \n",
-    "                                 \n",
-    "#     def q_rhs_H_mf_u_2(self, q_mf, p_mf):\n",
-    "        \n",
     "\n",
     "    ## Mean Field methods\n",
     "    def H_MF_nou(self, q_mf, p_mf, u_mf):\n",
@@ -495,6 +507,7 @@
     "        # q_rhs_H_mf is the derivative wrt each of the local variables, so it will return something of dimension state_dim\n",
     "        # q_rhs_H_mf_u returns the partial derivatives wrt each control, concatenated together\n",
     "        q_rhs_H_mf_u = self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)\n",
+    "        assert np.shape(q_rhs_H_mf_u)==(len(self.control_indices), self.state_dim) # first dimension should be number of controls, inner dimension should be state_dim\n",
     "        q_rhs_H_mf_u_summed = sum([q_rhs_H_mf_u[i]*u_s[i] for i in range(len(u_s))])\n",
     "        return self.q_rhs_H_mf_nou(q_mf, p_mf) + q_rhs_H_mf_u_summed\n",
     "        \n",
@@ -559,7 +572,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 228,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1])"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myAgent2.q_s_dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "myAgent2.p_mf_dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
    "metadata": {
     "collapsed": false
    },
