--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -458,33 +458,49 @@
     "        p_rhs_H_l = self.p_rhs_H_l_nou(q_s, p_l, lambda_l) + sum([self.p_rhs_H_l_u(q_s, p_l)*u_s_i for u_s_i in u_s])\n",
     "        return np.concatenate([q_rhs_H_l, p_rhs_H_l])\n",
     "\n",
-    "#     def u_rhs(self, t, u_vec, **kwargs):\n",
-    "#         u_s = kwargs['u_0']\n",
-    "#         state_dim = kwargs['state_dim']\n",
-    "#         q_mf = kwargs['q_mf']\n",
-    "#         u_mf = kwargs['u_mf']\n",
+    "    def u_rhs(self, t, u_vec, **kwargs):\n",
+    "        u_s = kwargs['u_0']\n",
+    "        state_dim = kwargs['state_dim']\n",
+    "        q_mf_dot = kwargs['q_mf_dot']\n",
+    "        q_s_dot = kwargs['q_s_dot']\n",
+    "        p_mf_dot = kwargs['p_mf_dot']\n",
+    "        q_mf = kwargs['q_mf']\n",
+    "        u_mf = kwargs['u_mf']\n",
+    "        p_mf = kwargs['p_mf']\n",
     "        \n",
-    "#         # don't have q_s_dot, q_mf_dot, or p_mf_dot\n",
-    "#         def Beta_j(q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j):\n",
+    "        # don't have q_s_dot, q_mf_dot, or p_mf_dot\n",
+    "        def Beta_j(q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j):\n",
+    "            Beta_mf=[]\n",
+    "            Beta_l=[]\n",
+    "            for k in range(len(self.control_indices)):\n",
+    "                Beta_mf_k = self.H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) +\n",
+    "                            self.H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
+    "                Beta_l_k = self.H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_l_dot)) +\n",
+    "                            self.H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
+    "                \n",
+    "#         def alpha_j(q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j):\n",
     "#             Beta_mf=[]\n",
     "#             Beta_l=[]\n",
-    "#             for k in range(len())\n",
+    "#             for k in range(len(self.control_indices)):\n",
+    "#                 Beta_mf_k = self.H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) +\n",
+    "#                             self.H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
+    "#                 Beta_l_k = self.H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_l_dot)) +\n",
+    "#                             self.H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
+    "                \n",
     "            \n",
-    "            \n",
-    "            \n",
-    "#         def alpha_mf():\n",
+    "        def alpha_mf():\n",
     "        \n",
-    "#         def Beta_l()\n",
+    "        def Beta_l()\n",
     "        \n",
-    "#         def alpha_l()\n",
+    "        def alpha_l()\n",
     "        \n",
-    "#         qp_vec = kwargs['qp_vec']\n",
+    "        qp_vec = kwargs['qp_vec']\n",
     "        \n",
-    "#         u_1_dot = -1*self.Gamma*(self.gamma*(alpha()))\n",
-    "#         u_2_dot = \n",
-    "#         u_dot = np.concatenate([]) \n",
+    "        u_1_dot = -1*self.Gamma*(self.gamma*(alpha()))\n",
+    "        u_2_dot = \n",
+    "        u_dot = np.concatenate([]) \n",
     "\n",
-    "#         return \n",
+    "        return \n",
     "\n",
     "\n",
     "    ## Mean Field methods\n",
@@ -1089,6 +1105,28 @@
    "outputs": [],
    "source": [
     "q_ls_bars, p_ls_bars, p_mfs_bars, u_bars, windows = sliding_window(myAgent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 2]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myAgent2.q_rhs_H_mf_u(p_mfs_bar[0],q_mf,u_mf)[k]"
    ]
   },
   {
