--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -382,7 +382,7 @@
     "        return 1\n",
     "\n",
     "    def H_l_u(self, q_s, p_l):\n",
-    "        return 1\n",
+    "        return np.array([0])\n",
     "\n",
     "    def q_rhs_H_l(self, q_s, p_l, u_s, lambda_l):\n",
     "        q_rhs_H_l_u = self.q_rhs_H_l_u(q_s, p_l, u_s, lambda_l)\n",
@@ -485,18 +485,18 @@
     "        p_mf = qp_vec[2*state_dim:]\n",
     "        \n",
     "        # don't have q_s_dot, q_mf_dot, or p_mf_dot\n",
-    "        def Beta_j(q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j):\n",
+    "        def Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j):\n",
     "            Beta_mf=[]\n",
     "            Beta_l=[]\n",
     "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
+    "            H_l_u = self.H_l_u(q_s, p_l)\n",
     "            lambda_l=0\n",
-    "            import pdb; pdb.set_trace()\n",
     "            j=j-1 # indices start at 0 but control indices start at 1\n",
     "            for k in range(len(self.control_indices)):\n",
     "                Beta_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) + \\\n",
     "                            H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
-    "                Beta_l_k = self.H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_mf, p_mf, u_s, lambda_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_mf, p_mf, u_s, lambda_l)[k], p_mf_dot)) + \\\n",
-    "                           self.H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_mf, p_mf, u_s, lambda_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_mf, p_mf, u_s, lambda_l)[j], p_mf_dot))\n",
+    "                Beta_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_mf, p_mf, u_s, lambda_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_mf, p_mf, u_s, lambda_l)[k], p_mf_dot)) + \\\n",
+    "                           H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_mf, p_mf, u_s, lambda_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_mf, p_mf, u_s, lambda_l)[j], p_mf_dot))\n",
     "                    \n",
     "                Beta_mf.append(Beta_mf_k)\n",
     "                Beta_l.append(Beta_l_k)\n",
@@ -506,6 +506,7 @@
     "            alpha_mf = []\n",
     "            alpha_l = []\n",
     "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
+    "            H_l_u = self.H_l_u(q_s, p_l)\n",
     "            for k in range(len(self.control_indices)):\n",
     "                alpha_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) +\\\n",
     "                            H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
@@ -516,10 +517,10 @@
     "            return alpha_mf, alpha_l\n",
     "                \n",
     "        for j in self.control_indices:\n",
-    "            Beta_mf, Beta_l = Beta_j(q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j)\n",
-    "            alpha_mf, alpha_l = alpha_j(q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j)\n",
+    "            Beta_mf, Beta_l = Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j)\n",
+    "            alpha_mf, alpha_l = alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j)\n",
     "\n",
-    "        return \n",
+    "        return -1*self.Gamma*(self.gamma(self.alpha_mf_k))\n",
     "\n",
     "\n",
     "    ## Mean Field methods\n",
@@ -1128,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -1147,34 +1148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> <ipython-input-4-79cafb13dd02>(178)Beta_j()\n",
-      "-> j=j-1 # indices start at 0 but control indices start at 1\n",
-      "(Pdb) n\n",
-      "> <ipython-input-4-79cafb13dd02>(179)Beta_j()\n",
-      "-> for k in range(len(self.control_indices)):\n",
-      "(Pdb) n\n",
-      "> <ipython-input-4-79cafb13dd02>(180)Beta_j()\n",
-      "-> Beta_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) +                             H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
-      "(Pdb) n\n",
-      "> <ipython-input-4-79cafb13dd02>(181)Beta_j()\n",
-      "-> Beta_l_k = self.H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_l_dot)) +                            self.H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
-      "(Pdb) n\n",
-      "TypeError: \"'instancemethod' object has no attribute '__getitem__'\"\n",
-      "> <ipython-input-4-79cafb13dd02>(181)Beta_j()\n",
-      "-> Beta_l_k = self.H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_l_dot)) +                            self.H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
-      "(Pdb) np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_l_dot)) +                            self.H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
-      "*** SyntaxError: invalid syntax (<stdin>, line 1)\n",
-      "(Pdb) self.p_rhs_H_l_u(q_s, p_l)[j]\n",
-      "*** TypeError: p_rhs_H_l_u() takes exactly 5 arguments (3 given)\n"
+     "ename": "TypeError",
+     "evalue": "alpha_j() takes exactly 9 arguments (8 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-ef3a44552add>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmyAgent2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mu_rhs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmyAgent2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGamma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmyAgent2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGamma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqp_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqp_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mu_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq_s_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l_dot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp_l_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf_dot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mu_mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-4-3e81585c7d2b>\u001b[0m in \u001b[0;36mu_rhs\u001b[0;34m(self, t, u_vec, **kwargs)\u001b[0m\n\u001b[1;32m    200\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrol_indices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m             \u001b[0mBeta_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBeta_l\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBeta_j\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 202\u001b[0;31m             \u001b[0malpha_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha_l\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malpha_j\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    203\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    204\u001b[0m         \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: alpha_j() takes exactly 9 arguments (8 given)"
      ]
     }
    ],
